<resources>
    <string name="app_name">Calculator</string>
    <string name="alvincalculator">Alvin\'s Calculator</string>
    <string name="no1">number 1</string>
    <string name="no2">number 2</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="calculatoralvin">Alvin Calculator</string>
    <string name="number1andresult">number1 and result</string>
    <string name="number1result">number1/result</string>
    <string name="edtx">Enter first number/result</string>
    <string name="edtx2">Enter second number</string>
    <string name="balance">Button</string>
    <string name="remainder">%</string>
</resources>